--- a/css/foundation-changes.css
+++ b/css/foundation-changes.css
@@ -42,14 +42,17 @@ body {
 .row {
     max-width: 100%; !important
 }
+.columns {
+    padding:0px 00px;
+}
 
 .sidebar {
     background-color:transparent;
 }
 
 .sidebar-left {
+    padding:0px 10px;
 }
-
 .sidebar-left > .panel {
     margin-bottom: 0px;
     border: 1px solid #444;
@@ -57,7 +60,7 @@ body {
 
 .sidebar-left .gate {
     height: 60px;
-    border: 1px solid #000;
+    border: none;
 }
 
 .invalid {
@@ -69,7 +72,9 @@ body {
     margin:0px;
     margin-top:5px;
 }
-
+.sidebar-left > .button.dropdown:first-of-type {
+    margin-top: 0px;
+}
 .sidebar-right {
 }
 
