Improve the controls for simulation

--- a/css/gateplay.css
+++ b/css/gateplay.css
@@ -67,6 +67,10 @@ body {
     cursor: pointer;
 }
 
+.disabled {
+    display: none !important;
+}
+
 .main-row {
     border-top: 1px solid #303030;
     padding-top:1px;
