--- a/css/gateplay.css
+++ b/css/gateplay.css
@@ -89,6 +89,18 @@ body {
     border: 1px solid #444;
 }
 
+.sidebar-left table {
+    width: 100%;
+    background-color: transparent;
+    border: none;
+}
+.sidebar-left table tr {
+    background-color: transparent;
+}
+.sidebar-left table td {
+    font-weight: bold;
+}
+
 .gate {
     border: none;
     cursor: move;
@@ -96,12 +108,6 @@ body {
 }
 .gate.invalid {
     background-position: right;
-}
-.gate-left {
-    float: left;
-}
-.gate-right {
-    float: right;
 }
 
 .sidebar-left > .button.dropdown {
